# rsnet

./: .gitattributes  Cargo.toml  README.md  build.rs
assets/: line_cap.ggb
assets/shaders/grid/: grid.wgsl
assets/shaders/include/: common.inc.wgsl  fragments_storage.inc.wgsl  scene_storage.inc.wgsl
assets/shaders/primitives/: primitive.wgsl  primitive_2.wgsl
assets/shaders/text/: text_offscreen.wgsl  text_onscreen.wgsl
assets/shaders/wires/: wires.wgsl
crates/rsnet_derive/src/: lib.rs
crates/rsnet_derive/src/renderer/: mod.rs
crates/rsnet_net_parser/: Cargo.toml
crates/rsnet_net_parser/src/: lib.rs  main.ipynb  main.rs  test.py  types.rs
crates/rsnet_viewer/: Cargo.toml  build.rs
crates/rsnet_viewer/src/: lib.rs  main.rs  types.rs
crates/rsnet_viewer/src/app/: mod.rs  state.rs
crates/rsnet_viewer/src/gui/: mod.rs  renderer.rs
crates/rsnet_viewer/src/renderer/: mod.rs  renderer.rs  shared.rs
rsnet_derive/: Cargo.toml
rsnet_derive/src/: lib.rs
rsnet_derive/src/renderer/: mod.rs
sim/Stanford_Model_RRAM_v1.0/Stanford_Model_RRAM_V1/: Parameters.mat  Physical_Parameters.fig  Physical_Parameters.m  StanfordGUI.fig  StanfordGUI.m  Technological_Parameters.fig  Technological_Parameters.m  Test.mat
sim/python_stanford_model/: lib.py  main.ipynb  utils.py
src/: main.rs
src/app/: event_loop.rs  mod.rs  state.rs  utils.rs
src/app/camera/: camera.rs  camera_controller.rs  mod.rs
src/gui/: mod.rs  renderer.rs  state.rs
src/gui/builder/: mod.rs  top_panel.rs
src/renderer/: mod.rs  shared.rs  utils.rs
src/renderer/effects/: mod.rs  render.rs
src/renderer/primitives/: common.rs  mod.rs  pipeline.rs  render.rs  shared.rs  utils.rs
src/renderer/text_renderer/: shared.rs
src/renderer/wires/: mod.rs  pipeline.rs  render.rs
src/scene/: component.rs  mod.rs  scene_manager.rs  shared.rs  utils.rs  wire.rs
src/utils/: frame_counter.rs  mod.rs
src/utils/wgpu/: context.rs  mod.rs  surface.rs
(+39 files in other folders)
