workspace = { members = ["rsnet_derive"] }
[package]
name = "rsnet"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Manuel Cantudo Gómez <cantudo@ugr.es>"]

[[bin]]
name = "rsnet"
path = "src/main.rs"

[lints.rust]
dead_code = "allow"
unused = "allow"

[dependencies]
rsnet-derive = { path = "rsnet_derive" }

cfg-if = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
anyhow = "1.0.78"


rayon = "1.9.0"

uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
md-5 = "0.10.6"
fxhash = "0.2.1"

wgpu = "0.19.4"
winit = { version = "0.29.4", features = ["rwh_05"] }

# egui-wgpu = { git = "https://github.com/emilk/egui.git" }
# egui-winit = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"

# egui = { git = "https://github.com/emilk/egui.git"}
egui = "0.26.2"

tokio = { version = "1.34.0", features = ["rt-multi-thread"] }

web-time = "0.2.3"
nalgebra = "0.32.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["nalgebra"] }
smaa = "0.13.0"


# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# console_log = "1.0"
# wgpu = { version = "0.18", features = ["webgl"]}
# wasm-bindgen = "=0.2.91"
# wasm-bindgen-futures = "0.4.30"
# web-sys = { version = "0.3.68", features = [
#     "Document",
#     "Window",
#     "Element",
#     "GpuComputePassTimestampWrite"
# ]}

